# ipc

./: CMakeLists.txt  README.md  ipc_client.cc  ipc_comm.h  ipc_server.cc
src/: ipc_client.cc  ipc_comm.h  ipc_message.cc  ipc_message.h  ipc_pipe.cc  ipc_pipe.h  ipc_server.cc  ipc_shm.cc  ipc_shm.h  ipc_signal.cc  ipc_signal.h
